fix: activities page header help icon misalignment (#181)
- activities page header help icon misalignment
- sticky headers misalignment in instances header and activities header
- added tests

--- a/src/features/activities/components/ActivitiesHeader/ActivitiesHeader.module.scss
+++ b/src/features/activities/components/ActivitiesHeader/ActivitiesHeader.module.scss
@@ -1,22 +1,18 @@
-@import "vanilla-framework/scss/settings_spacing";
 @import "vanilla-framework/scss/settings_colors";
+@import "vanilla-framework/scss/settings_spacing";
 
-.container {
+.top {
   align-items: flex-start;
   background-color: $color-x-light;
   column-gap: $sph--x-large;
   display: flex;
   padding-bottom: $spv--large;
-}
 
-.sticky {
-  position: sticky;
-  top: 4.5rem;
-  z-index: 1;
-}
-
-.searchContainer {
-  flex-basis: 30rem;
+  &.sticky {
+    position: sticky;
+    top: var(--pageheader-height);
+    z-index: 1;
+  }
 }
 
 .filters {
